cambio funzionamento delle attivitò introduzione dei template per permettere alle attività di ripetersi