@@ -1,10 +1,12 @@
 package it.unical.ea.Travel.Config;
 
 import it.unical.ea.Travel.Entities.activity.Activity;
+import it.unical.ea.Travel.Entities.activity.ActivityTemplate;
 import it.unical.ea.Travel.Entities.itinerary.Itinerary;
 import it.unical.ea.Travel.Entities.location.Location;
 import it.unical.ea.Travel.Entities.user.User;
 import it.unical.ea.Travel.Repositories.activity.ActivityRepository;
+import it.unical.ea.Travel.Repositories.activity.ActivityTemplateRepository;
 import it.unical.ea.Travel.Repositories.itinerary.ItineraryRepository;
 import it.unical.ea.Travel.Repositories.location.LocationRepository;
 import it.unical.ea.Travel.Repositories.user.UserRepository;
@@ -40,16 +42,18 @@ public class DataSeeder implements CommandLineRunner {
     private static final String TEST_PASSWORD = "aaa";
 
     private final UserRepository userRepository;
+    private final ActivityTemplateRepository activityTemplateRepository;
     private final ActivityRepository activityRepository;
     private final ItineraryRepository itineraryRepository;
     private final LocationRepository locationRepository;
     private final KeycloakAdminService keycloakAdminService;
     private final ReviewRepository reviewRepository;
 
-    public DataSeeder(UserRepository userRepository, ActivityRepository activityRepository,
+    public DataSeeder(UserRepository userRepository, ActivityTemplateRepository activityTemplateRepository, ActivityRepository activityRepository,
                       ItineraryRepository itineraryRepository, LocationRepository locationRepository,
                       KeycloakAdminService keycloakAdminService, ReviewRepository reviewRepository) {
         this.userRepository = userRepository;
+        this.activityTemplateRepository = activityTemplateRepository;
         this.activityRepository = activityRepository;
         this.itineraryRepository = itineraryRepository;
         this.locationRepository = locationRepository;
@@ -188,106 +192,137 @@ public class DataSeeder implements CommandLineRunner {
         itinerary3.setEndDateTime(LocalDateTime.now().plusDays(47));
         itinerary3.setCreator(organizer);
 
-        // --- Activities ---
+        // --- Templates and Activities ---
+        ActivityTemplate tpl1 = new ActivityTemplate();
+        tpl1.setName("Visita al Colosseo");
+        tpl1.setDescription("Tour guidato al Colosseo e Fori Imperiali.");
+        tpl1.setLocation("Roma");
+        tpl1.setLocationEntity(loc1);
+        tpl1.setOrganizer(organizer);
+        tpl1.setImages(List.of("https://images.unsplash.com/photo-1552832230-c0197dd311b5?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"));
+        tpl1.setTags(new HashSet<>(Arrays.asList(TravelTag.CULTURA, TravelTag.STORIA)));
+        tpl1 = activityTemplateRepository.save(tpl1);
+
         Activity act1 = new Activity();
-        act1.setName("Visita al Colosseo");
-        act1.setDescription("Tour guidato al Colosseo e Fori Imperiali.");
-        act1.setLocation("Roma");
+        act1.setTemplate(tpl1);
         act1.setStartTime(LocalDateTime.now().plusDays(10).plusHours(9));
         act1.setEndTime(LocalDateTime.now().plusDays(10).plusHours(12));
         act1.setParticipants(20);
         act1.setPrice(new BigDecimal("35.00"));
-        act1.setLocationEntity(loc1);
-        act1.setOrganizer(organizer);
-        act1.setImages(List.of("https://images.unsplash.com/photo-1552832230-c0197dd311b5?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"));
-        act1.setTags(new HashSet<>(Arrays.asList(TravelTag.CULTURA, TravelTag.STORIA)));
+
+        ActivityTemplate tpl2 = new ActivityTemplate();
+        tpl2.setName("Cena a Trastevere");
+        tpl2.setDescription("Cena tipica romana in una trattoria a Trastevere.");
+        tpl2.setLocation("Roma");
+        tpl2.setLocationEntity(loc1);
+        tpl2.setOrganizer(organizer);
+        tpl2.setTags(new HashSet<>(Arrays.asList(TravelTag.CULTURA, TravelTag.CIBO)));
+        tpl2 = activityTemplateRepository.save(tpl2);
 
         Activity act2 = new Activity();
-        act2.setName("Cena a Trastevere");
-        act2.setDescription("Cena tipica romana in una trattoria a Trastevere.");
-        act2.setLocation("Roma");
+        act2.setTemplate(tpl2);
         act2.setStartTime(LocalDateTime.now().plusDays(10).plusHours(20));
         act2.setEndTime(LocalDateTime.now().plusDays(10).plusHours(23));
         act2.setParticipants(15);
         act2.setPrice(new BigDecimal("45.00"));
-        act2.setLocationEntity(loc1);
-        act2.setOrganizer(organizer);
-        act2.setTags(new HashSet<>(Arrays.asList(TravelTag.CULTURA, TravelTag.CIBO)));
+
+        ActivityTemplate tpl3 = new ActivityTemplate();
+        tpl3.setName("Trekking Tre Cime");
+        tpl3.setDescription("Escursione panoramica alle Tre Cime di Lavaredo.");
+        tpl3.setLocation("Dolomiti");
+        tpl3.setLocationEntity(loc2);
+        tpl3.setOrganizer(organizer);
+        tpl3.setImages(List.of("https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"));
+        tpl3.setTags(new HashSet<>(Arrays.asList(TravelTag.AVVENTURA, TravelTag.MONTAGNA, TravelTag.NATURA, TravelTag.TREKKING)));
+        tpl3 = activityTemplateRepository.save(tpl3);
 
         Activity act3 = new Activity();
-        act3.setName("Trekking Tre Cime");
-        act3.setDescription("Escursione panoramica alle Tre Cime di Lavaredo.");
-        act3.setLocation("Dolomiti");
+        act3.setTemplate(tpl3);
         act3.setStartTime(LocalDateTime.now().plusDays(21).plusHours(8));
         act3.setEndTime(LocalDateTime.now().plusDays(21).plusHours(16));
         act3.setParticipants(10);
         act3.setPrice(new BigDecimal("25.00"));
-        act3.setLocationEntity(loc2);
-        act3.setOrganizer(organizer);
-        act3.setImages(List.of("https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"));
-        act3.setTags(new HashSet<>(Arrays.asList(TravelTag.AVVENTURA, TravelTag.MONTAGNA, TravelTag.NATURA, TravelTag.TREKKING)));
+
+        ActivityTemplate tpl4 = new ActivityTemplate();
+        tpl4.setName("Spa in Montagna");
+        tpl4.setDescription("Giornata di relax alle terme alpine.");
+        tpl4.setLocation("Dolomiti");
+        tpl4.setLocationEntity(loc2);
+        tpl4.setOrganizer(organizer);
+        tpl4.setTags(new HashSet<>(Arrays.asList(TravelTag.RELAX, TravelTag.MONTAGNA)));
+        tpl4 = activityTemplateRepository.save(tpl4);
 
         Activity act4 = new Activity();
-        act4.setName("Spa in Montagna");
-        act4.setDescription("Giornata di relax alle terme alpine.");
-        act4.setLocation("Dolomiti");
+        act4.setTemplate(tpl4);
         act4.setStartTime(LocalDateTime.now().plusDays(22).plusHours(10));
         act4.setEndTime(LocalDateTime.now().plusDays(22).plusHours(18));
         act4.setParticipants(10);
         act4.setPrice(new BigDecimal("60.00"));
-        act4.setLocationEntity(loc2);
-        act4.setOrganizer(organizer);
-        act4.setTags(new HashSet<>(Arrays.asList(TravelTag.RELAX, TravelTag.MONTAGNA)));
+
+        ActivityTemplate tplSafari = new ActivityTemplate();
+        tplSafari.setName("Game Drive");
+        tplSafari.setDescription("Safari in Jeep per vedere i Big Five.");
+        tplSafari.setLocation("Masai Mara");
+        tplSafari.setLocationEntity(loc3);
+        tplSafari.setOrganizer(organizer);
+        tplSafari.setTags(new HashSet<>(Arrays.asList(TravelTag.AVVENTURA, TravelTag.SAFARI, TravelTag.NATURA, TravelTag.ANIMALI)));
+        tplSafari = activityTemplateRepository.save(tplSafari);
 
         Activity actSafari = new Activity();
-        actSafari.setName("Game Drive");
-        actSafari.setDescription("Safari in Jeep per vedere i Big Five.");
-        actSafari.setLocation("Masai Mara");
+        actSafari.setTemplate(tplSafari);
         actSafari.setStartTime(LocalDateTime.now().plusDays(41).plusHours(6));
         actSafari.setEndTime(LocalDateTime.now().plusDays(41).plusHours(12));
         actSafari.setParticipants(6);
         actSafari.setPrice(new BigDecimal("150.00"));
-        actSafari.setLocationEntity(loc3);
-        actSafari.setOrganizer(organizer);
-        actSafari.setTags(new HashSet<>(Arrays.asList(TravelTag.AVVENTURA, TravelTag.SAFARI, TravelTag.NATURA, TravelTag.ANIMALI)));
 
-        // --- Additional independent activities ---
+        ActivityTemplate tpl5 = new ActivityTemplate();
+        tpl5.setName("Corso di Cucina Italiana");
+        tpl5.setDescription("Impara a fare pasta e pizza con uno chef locale.");
+        tpl5.setLocation("Firenze");
+        tpl5.setLocationEntity(null);
+        tpl5.setOrganizer(organizer);
+        tpl5.setImages(List.of("https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"));
+        tpl5.setTags(new HashSet<>(Arrays.asList(TravelTag.CIBO, TravelTag.CULTURA)));
+        tpl5 = activityTemplateRepository.save(tpl5);
+
         Activity act5 = new Activity();
-        act5.setName("Corso di Cucina Italiana");
-        act5.setDescription("Impara a fare pasta e pizza con uno chef locale.");
-        act5.setLocation("Firenze");
+        act5.setTemplate(tpl5);
         act5.setStartTime(LocalDateTime.now().plusDays(5).plusHours(16));
         act5.setEndTime(LocalDateTime.now().plusDays(5).plusHours(20));
         act5.setParticipants(8);
         act5.setPrice(new BigDecimal("80.00"));
-        act5.setLocationEntity(null);
-        act5.setOrganizer(organizer);
-        act5.setImages(List.of("https://images.unsplash.com/photo-1556910103-1c02745aae4d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"));
-        act5.setTags(new HashSet<>(Arrays.asList(TravelTag.CIBO, TravelTag.CULTURA)));
+
+        ActivityTemplate tpl6 = new ActivityTemplate();
+        tpl6.setName("Giro in Gondola");
+        tpl6.setDescription("Romantico giro nei canali di Venezia.");
+        tpl6.setLocation("Venezia");
+        tpl6.setLocationEntity(null);
+        tpl6.setOrganizer(organizer);
+        tpl6.setTags(new HashSet<>(Arrays.asList(TravelTag.ROMANTICISMO, TravelTag.CULTURA)));
+        tpl6 = activityTemplateRepository.save(tpl6);
 
         Activity act6 = new Activity();
-        act6.setName("Giro in Gondola");
-        act6.setDescription("Romantico giro nei canali di Venezia.");
-        act6.setLocation("Venezia");
+        act6.setTemplate(tpl6);
         act6.setStartTime(LocalDateTime.now().plusDays(2).plusHours(18));
         act6.setEndTime(LocalDateTime.now().plusDays(2).plusHours(19));
         act6.setParticipants(2);
         act6.setPrice(new BigDecimal("90.00"));
-        act6.setLocationEntity(null);
-        act6.setOrganizer(organizer);
-        act6.setTags(new HashSet<>(Arrays.asList(TravelTag.ROMANTICISMO, TravelTag.CULTURA)));
+
+        ActivityTemplate tpl7 = new ActivityTemplate();
+        tpl7.setName("Free Walking Tour");
+        tpl7.setDescription("Tour a piedi gratuito per il centro storico (mancia consigliata).");
+        tpl7.setLocation("Milano");
+        tpl7.setLocationEntity(null);
+        tpl7.setOrganizer(organizer);
+        tpl7.setTags(new HashSet<>(Arrays.asList(TravelTag.CULTURA, TravelTag.CITTA)));
+        tpl7 = activityTemplateRepository.save(tpl7);
 
         Activity act7 = new Activity();
-        act7.setName("Free Walking Tour");
-        act7.setDescription("Tour a piedi gratuito per il centro storico (mancia consigliata).");
-        act7.setLocation("Milano");
+        act7.setTemplate(tpl7);
         act7.setStartTime(LocalDateTime.now().plusDays(1).plusHours(10));
         act7.setEndTime(LocalDateTime.now().plusDays(1).plusHours(12));
         act7.setParticipants(30);
         act7.setPrice(BigDecimal.ZERO);
-        act7.setLocationEntity(null);
-        act7.setOrganizer(organizer);
-        act7.setTags(new HashSet<>(Arrays.asList(TravelTag.CULTURA, TravelTag.CITTA)));
 
         // Save all activities
         activityRepository.saveAll(Arrays.asList(act1, act2, act3, act4, actSafari, act5, act6, act7));
@@ -307,21 +342,21 @@ public class DataSeeder implements CommandLineRunner {
         if (travelers.isEmpty()) return;
         User reviewer = travelers.get(0);
         
-        List<Activity> activities = activityRepository.findAll();
-        if (!activities.isEmpty()) {
-            Activity act1 = activities.get(0);
+        List<ActivityTemplate> templates = activityTemplateRepository.findAll();
+        if (!templates.isEmpty()) {
+            ActivityTemplate tpl1 = templates.get(0);
             Review rev1 = new Review();
             rev1.setAuthor(reviewer);
-            rev1.setActivity(act1);
+            rev1.setActivityTemplate(tpl1);
             rev1.setRating(5);
             rev1.setComment("Attività fantastica, guida super preparata!");
             reviewRepository.save(rev1);
 
-            if (activities.size() > 1) {
-                Activity act2 = activities.get(1);
+            if (templates.size() > 1) {
+                ActivityTemplate tpl2 = templates.get(1);
                 Review rev2 = new Review();
                 rev2.setAuthor(reviewer);
-                rev2.setActivity(act2);
+                rev2.setActivityTemplate(tpl2);
                 rev2.setRating(4);
                 rev2.setComment("Molto bello, ma faceva un po' freddo.");
                 reviewRepository.save(rev2);
